Bug 311735 - When --disable-libxul, build a little xul.dll with the embedding exports, r=darin (This xul.dll is not built in static builds because it wouldn't have access to the static module list anyway)